name:                braille-parsers
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Mario Lang
maintainer:          mlang@blind.guru
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:    Text.Parser.Braille
  build-depends:      base >=4.8 && <4.9, parsec, parsers, transformers, trifecta
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall

executable test
  main-is:          test.hs
  build-depends:    base >= 4.8, braille-parsers >= 0.1.0.0, parsers, transformers, trifecta, utf8-string
  default-language: Haskell2010

